--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,5 @@
 ---
-title: "momougnhieh_pitch"
+title: "General overview"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Test page
